--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
 	"test": "npm run build && jest"
   },
   "author": "Sanford Gifford",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "workspaces": [
     "packages/engine"
   ],
