--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-	"clearDist": "npm run clearDist -ws",
-	"build": "npm run build -ws",
-	"test": "npm run build && jest"
+    "clearDist": "rm -rf dist",
+    "build": "npm run clearDist && tsc",
+    "test": "npm run build && jest"
   },
   "author": "Sanford Gifford",
   "license": "Apache-2.0",
@@ -18,5 +18,8 @@
     "jest": "^27.3.1",
     "ts-jest": "^27.0.7",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0"
   }
 }
