--- a/package.json
+++ b/package.json
@@ -2,24 +2,16 @@
   "name": "common-paper-story-prompt",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
   "scripts": {
-    "clearDist": "rm -rf dist",
-    "build": "npm run clearDist && tsc",
-    "test": "npm run build && jest"
+    "test": "jest"
   },
   "author": "Sanford Gifford",
   "license": "Apache-2.0",
   "workspaces": [
     "packages/engine"
   ],
-  "devDependencies": {
-    "@types/jest": "^27.0.3",
-    "jest": "^27.3.1",
-    "ts-jest": "^27.0.7",
-    "typescript": "^4.5.2"
-  },
   "dependencies": {
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "jest": "^27.3.1"
   }
 }
