--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "license": "Apache-2.0",
   "dependencies": {
     "dotenv": "^10.0.0",
-    "jest": "^27.3.1"
+    "jest": "^27.3.1",
+    "tabula": "^1.10.0"
   }
 }
